syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_package = "com.avalancher.grpc";
option java_multiple_files = true;

service avalancher{
    rpc getWorkerId(google.protobuf.Empty) returns (WorkerIdResponse);
    rpc getTimestamp(google.protobuf.Empty) returns (TimeStampResponse);
    rpc getId(google.protobuf.Empty) returns (UniqueIdResponse);
    rpc getDatacenterId(google.protobuf.Empty) returns (DataCenterIdResponse);
}

message UniqueIdResponse{
    string useragent = 1;
}
message WorkerIdResponse{
    int64 workerId = 1;
}
message TimeStampResponse{
    int64 timstamp = 1;
}
message DataCenterIdResponse{
    int64 datacenterId = 1;
}